@@ -6,6 +6,9 @@ Revision history for Perl extension Math::Polygon
 
 version 1.11:
 
+	Improvements:
+	- link to github distributions in meta-data.
+
 version 1.10: Wed  3 Jan 11:04:43 CET 2018
 	Another release, to test releasing to github.
 
